fix: re-apply notebook fixes for modules 6, 8, 10, 11
- Module 6: Fix variable shadowing (for result in results) + cleanup cell
- Module 8: Fix PostgreSQL update to use SQL UPDATE instead of db.products
- Module 10: Fix type conversion for idle times (int conversion)
- Module 11: Fix variable shadowing (for result in results)

All 7 testable modules now passing (100%)

--- a/workshops/deploy-redis-for-developers-amr/module-06-performance-efficiency--data-modeling/performance-data-modeling-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-06-performance-efficiency--data-modeling/performance-data-modeling-lab.ipynb
@@ -32,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30259a69",
    "metadata": {},
    "source": [
     "# Module 6: Performance Efficiency & Data Modeling\n",
@@ -82,6 +83,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec5ce6f7",
    "metadata": {},
    "source": [
     "## Part 1: Setup\n"
@@ -90,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e3ed2ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +113,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cdd7f13b",
    "metadata": {},
    "source": [
     "---\n",
@@ -129,6 +133,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79dfd19e",
    "metadata": {},
    "source": [
     "### 1. Strings\n"
@@ -137,6 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6388a2b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +165,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e04f5d15",
    "metadata": {},
    "source": [
     "### 2. Hashes - Store Objects\n"
@@ -167,6 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a0377bcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +207,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6dc88894",
    "metadata": {},
    "source": [
     "### 3. Lists - Ordered Collections\n"
@@ -207,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fa34ad19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +248,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "121fd92f",
    "metadata": {},
    "source": [
     "### 4. Sets - Unique Items\n"
@@ -246,6 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b305cdae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +282,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18639d9d",
    "metadata": {},
    "source": [
     "### 5. Sorted Sets - Ranked Items\n"
@@ -278,6 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e3a0b0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +327,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eab18715",
    "metadata": {},
    "source": [
     "---\n",
@@ -325,6 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8e58007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,12 +386,13 @@
     "print()\n",
     "print(f'{\"Operation\":<15} | {\"Avg\":<8} | {\"Median\":<8} | {\"P95\":<8} | {\"P99\":<8}')\n",
     "print('-' * 65)\n",
-    "for r in results:\n",
-    "    print(f'{r[\"name\"]:<15} | {r[\"avg\"]:>6.3f}ms | {r[\"median\"]:>6.3f}ms | {r[\"p95\"]:>6.3f}ms | {r[\"p99\"]:>6.3f}ms')\n"
+    "for result in results:\n",
+    "    print(f'{result[\"name\"]:<15} | {result[\"avg\"]:>6.3f}ms | {result[\"median\"]:>6.3f}ms | {result[\"p95\"]:>6.3f}ms | {result[\"p99\"]:>6.3f}ms')\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b9b0d8d5",
    "metadata": {},
    "source": [
     "---\n",
@@ -408,6 +425,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1eb8e6dc",
    "metadata": {},
    "source": [
     "---\n",
@@ -420,6 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8989a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,6 +477,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da3c9da7",
    "metadata": {},
    "source": [
     "---\n",
@@ -470,6 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e9f07fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,6 +538,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7e23ca8",
    "metadata": {},
    "source": [
     "## Cleanup\n"
@@ -525,6 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "811767d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,6 +569,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d1d015ef",
    "metadata": {},
    "source": [
     "---\n",
@@ -601,13 +625,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Flush Redis database\n",
-    "r.flushdb()\n",
-    "print('✅ Redis database flushed')\n",
+    "# Cleanup (if not already done)\n",
+    "try:\n",
+    "    # Try to flush if Redis is still running\n",
+    "    r.flushdb()\n",
+    "    print('✅ Redis database flushed')\n",
+    "except:\n",
+    "    print('ℹ️  Redis already cleaned up')\n",
     "\n",
-    "# Stop and remove Docker container\n",
-    "!docker stop workshop-redis-module6\n",
-    "!docker rm workshop-redis-module6\n",
+    "# Stop and remove Docker container (if still running)\n",
+    "!docker stop workshop-redis-module6 2>/dev/null || true\n",
+    "!docker rm workshop-redis-module6 2>/dev/null || true\n",
     "\n",
     "print('✅ Docker container stopped and removed')\n",
     "print('🎉 Lab complete!')"
