--- a/workshops/deploy-redis-for-developers-amr/module-08-implement-caching-lab/implement-caching-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-08-implement-caching-lab/implement-caching-lab.ipynb
@@ -810,8 +810,10 @@
     "print(f\"  Price: ${result['product']['price']}\")\n",
     "print(f\"  Source: {result['source']}\")\n",
     "\n",
-    "# Simulate product update in database\n",
-    "db.products[0]['price'] = 799.99\n",
+    "# Simulate product update in database using SQL UPDATE\n",
+    "with db.conn.cursor() as cur:\n",
+    "    cur.execute(\"UPDATE products SET price = %s WHERE id = %s\", (799.99, 1))\n",
+    "    db.conn.commit()\n",
     "print(\"\\n✏️ Updated price in database to $799.99\")\n",
     "\n",
     "# Get again - still returns OLD cached value!\n",
