--- a/workshops/deploy-redis-for-developers-amr/module-10-troubleshooting--migration/troubleshooting-migration-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-10-troubleshooting--migration/troubleshooting-migration-lab.ipynb
@@ -22,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e74174a",
    "metadata": {},
    "source": [
     "# Module 10: Troubleshooting & Migration\n",
@@ -53,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "600d6997",
    "metadata": {},
    "source": [
     "## Part 1: Setup\n"
@@ -61,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ad7f0c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +87,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6812119d",
    "metadata": {},
    "source": [
     "---\n",
@@ -96,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8a7f5a76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,6 +163,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9810fbc",
    "metadata": {},
    "source": [
     "---\n",
@@ -170,6 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb03a5dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +225,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba7befbb",
    "metadata": {},
    "source": [
     "---\n",
@@ -230,6 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "755324ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +263,7 @@
     "    commands = []\n",
     "    \n",
     "    for client in clients:\n",
-    "        idle = client.get('idle', 0)\n",
+    "        idle = int(client.get('idle', 0))\n",
     "        idle_times.append(idle)\n",
     "        \n",
     "        cmd = client.get('cmd', 'unknown')\n",
@@ -270,7 +279,7 @@
     "        print(f'   Maximum: {max_idle} seconds')\n",
     "        \n",
     "        # Warn about idle connections\n",
-    "        long_idle = [c for c in clients if c.get('idle', 0) > 300]\n",
+    "        long_idle = [c for c in clients if int(c.get('idle', 0)) > 300]\n",
     "        if long_idle:\n",
     "            print(f'\\n⚠️  {len(long_idle)} clients idle > 5 minutes')\n",
     "            print('   Consider setting timeout for idle connections')\n",
@@ -290,6 +299,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5c5eaa4",
    "metadata": {},
    "source": [
     "---\n",
@@ -302,6 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "686a49b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,6 +363,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c005ea1",
    "metadata": {},
    "source": [
     "---\n",
@@ -364,6 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "267d4f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,6 +444,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d7c6ba6",
    "metadata": {},
    "source": [
     "---\n",
@@ -443,6 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32b3153a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,6 +540,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22b094f5",
    "metadata": {},
    "source": [
     "---\n",
@@ -537,6 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a957c3eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,6 +609,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40fa2817",
    "metadata": {},
    "source": [
     "---\n",
@@ -604,6 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6dc5e6fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,6 +696,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d477ef8a",
    "metadata": {},
    "source": [
     "---\n",
@@ -687,6 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c4dc3c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,6 +725,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd35e423",
    "metadata": {},
    "source": [
     "---\n",
