--- a/workshops/deploy-redis-for-developers-amr/module-11-advanced-features/advanced-features-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-11-advanced-features/advanced-features-lab.ipynb
@@ -22,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73a54080",
    "metadata": {},
    "source": [
     "# Module 11: Advanced Features - Redis Stack\n",
@@ -52,6 +53,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5350d74",
    "metadata": {},
    "source": [
     "## Part 1: Setup\n"
@@ -60,6 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebd4d004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +79,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd06ba07",
    "metadata": {},
    "source": [
     "### Connect to Redis\n"
@@ -84,6 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ba9533a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "251367d5",
    "metadata": {},
    "source": [
     "---\n",
@@ -135,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "010d6c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f390192e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,6 +218,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38627a79",
    "metadata": {},
    "source": [
     "---\n",
@@ -234,6 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02dbaf85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "930bb942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "20b4cf7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +315,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "915bcd9f",
    "metadata": {},
    "source": [
     "---\n",
@@ -322,6 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e6bae194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,6 +361,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bddb78d5",
    "metadata": {},
    "source": [
     "---\n",
@@ -359,6 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7e9e002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,12 +417,13 @@
     "\n",
     "print('⚡ Performance Benchmarks (100 iterations):')\n",
     "print()\n",
-    "for r in results:\n",
-    "    print(f'{r[\"name\"]:20} | Avg: {r[\"avg\"]:.2f}ms | Median: {r[\"median\"]:.2f}ms | P95: {r[\"p95\"]:.2f}ms')\n"
+    "for result in results:\n",
+    "    print(f'{result[\"name\"]:20} | Avg: {result[\"avg\"]:.2f}ms | Median: {result[\"median\"]:.2f}ms | P95: {result[\"p95\"]:.2f}ms')\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "075bed2b",
    "metadata": {},
    "source": [
     "---\n",
@@ -417,6 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c447179c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,6 +452,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aad244e4",
    "metadata": {},
    "source": [
     "---\n",
