--- a/workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/cost-optimization-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/cost-optimization-lab.ipynb
@@ -472,13 +472,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "${workspaceFolder}/.venv/bin/python"
+   }
   }
  },
  "nbformat": 4,
