Add custom styling for Redis workshops and update notebook metadata
- Introduced a new CSS file for consistent styling across Jupyter notebooks in Redis workshops.
- Added a helper Python function to load the custom CSS styling automatically.
- Updated notebook metadata to reflect the new Python version and improved display name.
- Included a fallback mechanism for styling in case the CSS file is not found.
- Enhanced the user experience with a success message upon loading the styling.

--- a/workshops/deploy-redis-for-developers-amr/module-06-performance-efficiency--data-modeling/performance-data-modeling-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-06-performance-efficiency--data-modeling/performance-data-modeling-lab.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003ed4a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Redis Workshop Styling\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "css_path = '../../../shared/notebook-styles.css'\n",
+    "try:\n",
+    "    with open(css_path, 'r') as f:\n",
+    "        css = f.read()\n",
+    "        display(HTML(f'<style>{css}</style>'))\n",
+    "        print('✅ Workshop styling loaded!')\n",
+    "except FileNotFoundError:\n",
+    "    print('ℹ️  Using default notebook styling')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "30259a69",
    "metadata": {},
@@ -33,10 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5cfdf257",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "docker: Error response from daemon: Conflict. The container name \"/workshop-redis-module6\" is already in use by container \"9a9328363544484ecd2c30a0edf711b69d0f812722cb8ec5ec664f3fc464d2b3\". You have to remove (or rename) that container to be able to reuse that name.\n",
+      "\n",
+      "Run 'docker run --help' for more information\n",
+      "Error response from daemon: container 9a9328363544484ecd2c30a0edf711b69d0f812722cb8ec5ec664f3fc464d2b3 is not running\n",
+      "✅ Redis container is running on localhost:6379\n"
+     ]
+    }
+   ],
    "source": [
     "# Start Redis container\n",
     "!docker run -d --name workshop-redis-module6 -p 6379:6379 redis:7-alpine\n",
@@ -61,10 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e3ed2ba1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Connected to Redis\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -q redis pandas matplotlib\n",
     "\n",
@@ -111,10 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6388a2b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ String Operations:\n",
+      "   Name: Alice Johnson\n",
+      "   Views: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# String operations\n",
     "r.set('user:1001:name', 'Alice Johnson')\n",
@@ -143,10 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a0377bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Hash Operations:\n",
+      "   Email: alice@example.com\n",
+      "   Name, Age: ['Alice Johnson', '30']\n",
+      "   Full user: {'id': '1001', 'name': 'Alice Johnson', 'email': 'alice@example.com', 'age': '30', 'country': 'USA'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Hash operations (ideal for objects)\n",
     "user = {\n",
@@ -185,10 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fa34ad19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ List Operations:\n",
+      "   Total activities: 4\n",
+      "   Recent: ['Added to cart', 'Completed checkout']\n"
+     ]
+    }
+   ],
    "source": [
     "# List operations (activity feed)\n",
     "activities = [\n",
@@ -226,10 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b305cdae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Set Operations:\n",
+      "   User 1 interests: {'cloud', 'technology', 'databases'}\n",
+      "   Has technology: 1\n",
+      "   Common interests: {'databases'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Set operations (tags, interests)\n",
     "r.sadd('user:1001:interests', 'technology', 'databases', 'cloud')\n",
@@ -260,10 +342,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4e3a0b0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Sorted Set Operations:\n",
+      "   Top 3 Players:\n",
+      "     1. diana: 2200 points\n",
+      "     2. bob: 2000 points\n",
+      "     3. charlie: 1800 points\n",
+      "   Alice rank: #5\n",
+      "   Alice score: 1500.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Sorted set operations (leaderboard)\n",
     "scores = {\n",
@@ -309,10 +405,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a8e58007",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚡ Performance Results (1000 iterations):\n",
+      "\n",
+      "Operation       | Avg      | Median   | P95      | P99     \n",
+      "-----------------------------------------------------------------\n",
+      "String SET      |  0.107ms |  0.080ms |  0.204ms |  0.813ms\n",
+      "String GET      |  0.064ms |  0.061ms |  0.076ms |  0.108ms\n",
+      "Hash HSET       |  0.062ms |  0.061ms |  0.071ms |  0.082ms\n",
+      "List RPUSH      |  0.064ms |  0.059ms |  0.075ms |  0.155ms\n",
+      "Set SADD        |  0.061ms |  0.060ms |  0.070ms |  0.088ms\n",
+      "ZSet ZADD       |  0.065ms |  0.064ms |  0.075ms |  0.080ms\n"
+     ]
+    }
+   ],
    "source": [
     "def benchmark(name, operation, iterations=1000):\n",
     "    \"\"\"Benchmark operation performance\"\"\"\n",
@@ -407,10 +520,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b8989a5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💾 Memory Usage Comparison:\n",
+      "   String (JSON): 168 bytes\n",
+      "   Hash: 136 bytes\n",
+      "   Difference: 32 bytes\n",
+      "   Hash is 1.24x more memory efficient!\n"
+     ]
+    }
+   ],
    "source": [
     "# Memory analysis\n",
     "import sys\n",
@@ -459,10 +584,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5e9f07fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛒 Shopping Cart:\n",
+      "   Items: {'P001': '2', 'P002': '1', 'P003': '3'}\n",
+      "   Total quantity: 6\n"
+     ]
+    }
+   ],
    "source": [
     "class ShoppingCart:\n",
     "    \"\"\"Optimized shopping cart using Redis hashes\"\"\"\n",
@@ -516,10 +651,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "811767d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Redis data cleaned: 15 keys deleted\n",
+      "workshop-redis-module6\n",
+      "workshop-redis-module6\n",
+      "✅ Docker container removed\n",
+      "✅ Cleanup complete\n"
+     ]
+    }
+   ],
    "source": [
     "# Clean up test data\n",
     "keys = r.keys('*')\n",
@@ -614,9 +761,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Redis Workshop)",
    "language": "python",
-   "name": "python3"
+   "name": "redis-workshop"
   },
   "language_info": {
    "codemirror_mode": {
@@ -628,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.14"
   },
   "vscode": {
    "interpreter": {
