--- a/workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/cost-optimization-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/cost-optimization-lab.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Redis Workshop Styling\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "css_path = '../../../shared/notebook-styles.css'\n",
+    "try:\n",
+    "    with open(css_path, 'r') as f:\n",
+    "        css = f.read()\n",
+    "        display(HTML(f'<style>{css}</style>'))\n",
+    "        print('✅ Workshop styling loaded!')\n",
+    "except FileNotFoundError:\n",
+    "    print('ℹ️  Using default notebook styling')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,9 +491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Redis Workshop)",
    "language": "python",
-   "name": "python3"
+   "name": "redis-workshop"
   },
   "language_info": {
    "codemirror_mode": {
@@ -486,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.14"
   },
   "vscode": {
    "interpreter": {
