--- a/workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/provision-connect-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/provision-connect-lab.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Redis Workshop Styling\nfrom IPython.display import HTML\n\ncss_path = '../../../shared/notebook-styles.css'\ntry:\n    with open(css_path, 'r') as f:\n        css = f.read()\n        display(HTML(f'<style>{css}</style>'))\n        print('✅ Workshop styling loaded!')\nexcept FileNotFoundError:\n    print('ℹ️  Using default notebook styling')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -729,21 +738,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.12.1",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "vscode": {
    "interpreter": {
