--- a/workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/provision-connect-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/provision-connect-lab.ipynb
@@ -6,7 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Redis Workshop Styling\nfrom IPython.display import HTML\n\ncss_path = '../../../shared/notebook-styles.css'\ntry:\n    with open(css_path, 'r') as f:\n        css = f.read()\n        display(HTML(f'<style>{css}</style>'))\n        print('✅ Workshop styling loaded!')\nexcept FileNotFoundError:\n    print('ℹ️  Using default notebook styling')"
+    "# Load Redis Workshop Styling\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "css_path = '../../../shared/notebook-styles.css'\n",
+    "try:\n",
+    "    with open(css_path, 'r') as f:\n",
+    "        css = f.read()\n",
+    "        display(HTML(f'<style>{css}</style>'))\n",
+    "        print('✅ Workshop styling loaded!')\n",
+    "except FileNotFoundError:\n",
+    "    print('ℹ️  Using default notebook styling')"
    ]
   },
   {
@@ -60,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ All packages installed successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Install required packages\n",
     "!pip install -q redis azure-identity azure-mgmt-redis azure-mgmt-resource python-dotenv\n",
@@ -743,16 +761,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.12.1",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   },
   "vscode": {
    "interpreter": {
