Add custom Jupyter Notebook styles for Redis workshops across multiple modules
- Introduced a modern, professional stylesheet for Jupyter Notebooks in modules 09, 10, and 11.
- Implemented consistent theming using CSS variables for colors, fonts, and shadows.
- Enhanced Markdown cell styling including headers, paragraphs, links, lists, and blockquotes.
- Improved code block and output area aesthetics with distinct backgrounds and borders.
- Added responsive design adjustments for better mobile compatibility.
- Included print styles for a cleaner output when printing notebooks.

--- a/workshops/deploy-redis-for-developers-amr/module-02-azure-managed-redis-architecture/azure-architecture-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-02-azure-managed-redis-architecture/azure-architecture-lab.ipynb
@@ -3,10 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a874e479",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Redis Workshop Styling\nfrom IPython.display import HTML\n\ncss_path = '../../../shared/notebook-styles.css'\ntry:\n    with open(css_path, 'r') as f:\n        css = f.read()\n        display(HTML(f'<style>{css}</style>'))\n        print('✅ Workshop styling loaded!')\nexcept FileNotFoundError:\n    print('ℹ️  Using default notebook styling')"
+    "# 🎨 RUN THIS FIRST!\n",
+    "from IPython.display import display, HTML; from pathlib import Path\n",
+    "display(HTML(f'<style>{Path(\"workshops/deploy-redis-for-developers-amr/module-02-azure-managed-redis-architecture/notebook-styles.css\").read_text()}</style>'))"
    ]
   },
   {
