--- a/workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/cost-optimization-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/cost-optimization-lab.ipynb
@@ -3,20 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d56e3b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Redis Workshop Styling\n",
-    "from IPython.display import HTML\n",
-    "\n",
-    "css_path = '../../../shared/notebook-styles.css'\n",
-    "try:\n",
-    "    with open(css_path, 'r') as f:\n",
-    "        css = f.read()\n",
-    "        display(HTML(f'<style>{css}</style>'))\n",
-    "        print('✅ Workshop styling loaded!')\n",
-    "except FileNotFoundError:\n",
-    "    print('ℹ️  Using default notebook styling')"
+    "# 🎨 RUN THIS FIRST!\n",
+    "from IPython.display import display, HTML; from pathlib import Path\n",
+    "display(HTML(f'<style>{Path(\"workshops/deploy-redis-for-developers-amr/module-05-cost-optimization--operational-excellence/notebook-styles.css\").read_text()}</style>'))"
    ]
   },
   {
