--- a/workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/provision-connect-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/provision-connect-lab.ipynb
@@ -2,21 +2,501 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "1b4d303c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/* \n",
+       " * Redis Workshops - Jupyter Notebook Stylesheet\n",
+       " * Modern, professional styling for interactive labs\n",
+       " */\n",
+       "\n",
+       "/* Import modern fonts */\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap');\n",
+       "\n",
+       "/* Root variables for consistent theming */\n",
+       ":root {\n",
+       "    --redis-red: #DC382C;\n",
+       "    --redis-dark: #1a1a1a;\n",
+       "    --redis-gray: #2d2d2d;\n",
+       "    --success-green: #10b981;\n",
+       "    --warning-orange: #f59e0b;\n",
+       "    --info-blue: #3b82f6;\n",
+       "    --error-red: #ef4444;\n",
+       "    --bg-light: #f8fafc;\n",
+       "    --bg-dark: #0f172a;\n",
+       "    --text-primary: #1e293b;\n",
+       "    --text-secondary: #64748b;\n",
+       "    --border-color: #e2e8f0;\n",
+       "    --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);\n",
+       "    --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1);\n",
+       "    --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1);\n",
+       "    --output-blue-bg: #dbeafe;\n",
+       "    --output-blue-border: #3b82f6;\n",
+       "}\n",
+       "\n",
+       "/* Body and main container */\n",
+       "body {\n",
+       "    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;\n",
+       "    font-size: 15px;\n",
+       "    line-height: 1.6;\n",
+       "    color: var(--text-primary);\n",
+       "    background-color: var(--bg-light);\n",
+       "}\n",
+       "\n",
+       "/* Notebook container */\n",
+       "#notebook-container {\n",
+       "    max-width: 1200px;\n",
+       "    padding: 2rem;\n",
+       "    background-color: white;\n",
+       "    box-shadow: var(--shadow-lg);\n",
+       "    border-radius: 12px;\n",
+       "    margin: 2rem auto;\n",
+       "}\n",
+       "\n",
+       "/* Markdown cells */\n",
+       ".jp-MarkdownCell {\n",
+       "    font-size: 15px;\n",
+       "}\n",
+       "\n",
+       "/* Headers */\n",
+       ".jp-MarkdownCell h1,\n",
+       ".rendered_html h1 {\n",
+       "    color: var(--redis-red);\n",
+       "    font-weight: 700;\n",
+       "    font-size: 2.5rem;\n",
+       "    margin-top: 2rem;\n",
+       "    margin-bottom: 1.5rem;\n",
+       "    padding-bottom: 0.5rem;\n",
+       "    border-bottom: 3px solid var(--redis-red);\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell h2,\n",
+       ".rendered_html h2 {\n",
+       "    color: var(--redis-dark);\n",
+       "    font-weight: 600;\n",
+       "    font-size: 2rem;\n",
+       "    margin-top: 1.75rem;\n",
+       "    margin-bottom: 1rem;\n",
+       "    padding-bottom: 0.375rem;\n",
+       "    border-bottom: 2px solid var(--border-color);\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell h3,\n",
+       ".rendered_html h3 {\n",
+       "    color: var(--text-primary);\n",
+       "    font-weight: 600;\n",
+       "    font-size: 1.5rem;\n",
+       "    margin-top: 1.5rem;\n",
+       "    margin-bottom: 0.75rem;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell h4,\n",
+       ".rendered_html h4 {\n",
+       "    color: var(--text-primary);\n",
+       "    font-weight: 600;\n",
+       "    font-size: 1.25rem;\n",
+       "    margin-top: 1.25rem;\n",
+       "    margin-bottom: 0.5rem;\n",
+       "}\n",
+       "\n",
+       "/* Paragraphs */\n",
+       ".jp-MarkdownCell p,\n",
+       ".rendered_html p {\n",
+       "    margin-bottom: 1rem;\n",
+       "    color: var(--text-primary);\n",
+       "}\n",
+       "\n",
+       "/* Links */\n",
+       ".jp-MarkdownCell a,\n",
+       ".rendered_html a {\n",
+       "    color: var(--info-blue);\n",
+       "    text-decoration: none;\n",
+       "    border-bottom: 1px solid transparent;\n",
+       "    transition: all 0.2s ease;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell a:hover,\n",
+       ".rendered_html a:hover {\n",
+       "    color: var(--redis-red);\n",
+       "    border-bottom-color: var(--redis-red);\n",
+       "}\n",
+       "\n",
+       "/* Lists */\n",
+       ".jp-MarkdownCell ul,\n",
+       ".jp-MarkdownCell ol,\n",
+       ".rendered_html ul,\n",
+       ".rendered_html ol {\n",
+       "    margin-left: 1.5rem;\n",
+       "    margin-bottom: 1rem;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell li,\n",
+       ".rendered_html li {\n",
+       "    margin-bottom: 0.5rem;\n",
+       "    padding-left: 0.5rem;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell ul li::marker {\n",
+       "    color: var(--redis-red);\n",
+       "}\n",
+       "\n",
+       "/* Blockquotes */\n",
+       ".jp-MarkdownCell blockquote,\n",
+       ".rendered_html blockquote {\n",
+       "    border-left: 4px solid var(--redis-red);\n",
+       "    background-color: #fef2f2;\n",
+       "    padding: 1rem 1.5rem;\n",
+       "    margin: 1.5rem 0;\n",
+       "    border-radius: 0 8px 8px 0;\n",
+       "    color: var(--text-primary);\n",
+       "}\n",
+       "\n",
+       "/* Code blocks */\n",
+       ".jp-MarkdownCell code,\n",
+       ".rendered_html code {\n",
+       "    font-family: 'JetBrains Mono', 'Monaco', 'Courier New', monospace;\n",
+       "    font-size: 0.9em;\n",
+       "    background-color: #f1f5f9;\n",
+       "    padding: 0.2rem 0.4rem;\n",
+       "    border-radius: 4px;\n",
+       "    color: var(--redis-red);\n",
+       "    font-weight: 500;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell pre,\n",
+       ".rendered_html pre {\n",
+       "    background-color: var(--redis-gray);\n",
+       "    color: #e2e8f0;\n",
+       "    padding: 1.25rem;\n",
+       "    border-radius: 8px;\n",
+       "    overflow-x: auto;\n",
+       "    margin: 1.5rem 0;\n",
+       "    box-shadow: var(--shadow-sm);\n",
+       "    border-left: 4px solid var(--redis-red);\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell pre code,\n",
+       ".rendered_html pre code {\n",
+       "    background-color: transparent;\n",
+       "    color: inherit;\n",
+       "    padding: 0;\n",
+       "    font-size: 0.875rem;\n",
+       "    line-height: 1.7;\n",
+       "}\n",
+       "\n",
+       "/* Code cells */\n",
+       ".jp-CodeCell {\n",
+       "    background-color: #fafbfc;\n",
+       "    border-radius: 8px;\n",
+       "    margin: 1rem 0;\n",
+       "    border: 1px solid var(--border-color);\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       "\n",
+       ".jp-InputArea {\n",
+       "    background-color: var(--redis-gray);\n",
+       "}\n",
+       "\n",
+       ".jp-Editor {\n",
+       "    font-family: 'JetBrains Mono', 'Monaco', 'Courier New', monospace;\n",
+       "    font-size: 14px;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "\n",
+       "/* Code cell prompt */\n",
+       ".jp-InputPrompt {\n",
+       "    color: var(--redis-red);\n",
+       "    font-weight: 600;\n",
+       "}\n",
+       "\n",
+       ".jp-OutputPrompt {\n",
+       "    color: var(--success-green);\n",
+       "    font-weight: 600;\n",
+       "}\n",
+       "\n",
+       "/* Output areas - BLUE BACKGROUND WITH FRAME */\n",
+       "/* VS Code Jupyter Notebook specific selectors */\n",
+       ".cell-output-wrapper,\n",
+       ".output,\n",
+       ".cell-output {\n",
+       "    padding: 1rem !important;\n",
+       "    background-color: var(--output-blue-bg) !important;\n",
+       "    border: 2px solid var(--output-blue-border) !important;\n",
+       "    border-radius: 8px !important;\n",
+       "    margin-top: 0.5rem !important;\n",
+       "}\n",
+       "\n",
+       "/* Classic Jupyter compatibility */\n",
+       ".jp-OutputArea {\n",
+       "    padding: 1rem;\n",
+       "    background-color: var(--output-blue-bg);\n",
+       "    border: 2px solid var(--output-blue-border);\n",
+       "    border-radius: 8px;\n",
+       "    margin-top: 0.5rem;\n",
+       "}\n",
+       "\n",
+       ".jp-OutputArea-output,\n",
+       ".output-stream,\n",
+       ".output-result {\n",
+       "    font-family: 'JetBrains Mono', monospace;\n",
+       "    font-size: 13px;\n",
+       "    line-height: 1.6;\n",
+       "    color: var(--text-primary);\n",
+       "}\n",
+       "\n",
+       ".jp-OutputArea-output pre,\n",
+       ".output pre {\n",
+       "    background-color: transparent !important;\n",
+       "    color: var(--text-primary);\n",
+       "    border: none;\n",
+       "    margin: 0;\n",
+       "    padding: 0;\n",
+       "}\n",
+       "\n",
+       "/* Tables */\n",
+       ".jp-MarkdownCell table,\n",
+       ".rendered_html table {\n",
+       "    border-collapse: collapse;\n",
+       "    width: 100%;\n",
+       "    margin: 1.5rem 0;\n",
+       "    box-shadow: var(--shadow-sm);\n",
+       "    border-radius: 8px;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell th,\n",
+       ".rendered_html th {\n",
+       "    background-color: var(--redis-red);\n",
+       "    color: white;\n",
+       "    font-weight: 600;\n",
+       "    padding: 1rem;\n",
+       "    text-align: left;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell td,\n",
+       ".rendered_html td {\n",
+       "    padding: 0.875rem 1rem;\n",
+       "    border-bottom: 1px solid var(--border-color);\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell tr:last-child td,\n",
+       ".rendered_html tr:last-child td {\n",
+       "    border-bottom: none;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell tr:nth-child(even),\n",
+       ".rendered_html tbody tr:nth-child(even) {\n",
+       "    background-color: var(--bg-light);\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell tr:hover,\n",
+       ".rendered_html tbody tr:hover {\n",
+       "    background-color: #fef2f2;\n",
+       "    transition: background-color 0.2s ease;\n",
+       "}\n",
+       "\n",
+       "/* Horizontal rules */\n",
+       ".jp-MarkdownCell hr,\n",
+       ".rendered_html hr {\n",
+       "    border: none;\n",
+       "    height: 2px;\n",
+       "    background: linear-gradient(to right, var(--redis-red), transparent);\n",
+       "    margin: 2rem 0;\n",
+       "}\n",
+       "\n",
+       "/* Emoji and icons styling */\n",
+       ".jp-MarkdownCell .emoji {\n",
+       "    font-size: 1.2em;\n",
+       "    vertical-align: middle;\n",
+       "}\n",
+       "\n",
+       "/* Alert boxes */\n",
+       ".jp-MarkdownCell .alert,\n",
+       ".rendered_html .alert {\n",
+       "    padding: 1rem 1.25rem;\n",
+       "    margin: 1.5rem 0;\n",
+       "    border-radius: 8px;\n",
+       "    border-left: 4px solid;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell .alert-info,\n",
+       ".rendered_html .alert-info {\n",
+       "    background-color: #eff6ff;\n",
+       "    border-left-color: var(--info-blue);\n",
+       "    color: #1e40af;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell .alert-success,\n",
+       ".rendered_html .alert-success {\n",
+       "    background-color: #f0fdf4;\n",
+       "    border-left-color: var(--success-green);\n",
+       "    color: #166534;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell .alert-warning,\n",
+       ".rendered_html .alert-warning {\n",
+       "    background-color: #fffbeb;\n",
+       "    border-left-color: var(--warning-orange);\n",
+       "    color: #92400e;\n",
+       "}\n",
+       "\n",
+       ".jp-MarkdownCell .alert-danger,\n",
+       ".rendered_html .alert-danger {\n",
+       "    background-color: #fef2f2;\n",
+       "    border-left-color: var(--error-red);\n",
+       "    color: #991b1b;\n",
+       "}\n",
+       "\n",
+       "/* Badges and labels */\n",
+       ".badge {\n",
+       "    display: inline-block;\n",
+       "    padding: 0.25rem 0.75rem;\n",
+       "    font-size: 0.875rem;\n",
+       "    font-weight: 600;\n",
+       "    border-radius: 12px;\n",
+       "    margin: 0 0.25rem;\n",
+       "}\n",
+       "\n",
+       ".badge-primary {\n",
+       "    background-color: var(--redis-red);\n",
+       "    color: white;\n",
+       "}\n",
+       "\n",
+       ".badge-success {\n",
+       "    background-color: var(--success-green);\n",
+       "    color: white;\n",
+       "}\n",
+       "\n",
+       ".badge-info {\n",
+       "    background-color: var(--info-blue);\n",
+       "    color: white;\n",
+       "}\n",
+       "\n",
+       ".badge-warning {\n",
+       "    background-color: var(--warning-orange);\n",
+       "    color: white;\n",
+       "}\n",
+       "\n",
+       "/* Matplotlib/Plot styling */\n",
+       ".jp-OutputArea img {\n",
+       "    border-radius: 8px;\n",
+       "    box-shadow: var(--shadow-md);\n",
+       "    max-width: 100%;\n",
+       "    height: auto;\n",
+       "}\n",
+       "\n",
+       "/* Loading indicators */\n",
+       ".jp-OutputArea .spinner {\n",
+       "    color: var(--redis-red);\n",
+       "}\n",
+       "\n",
+       "/* Keyboard shortcuts display */\n",
+       "kbd {\n",
+       "    background-color: var(--redis-gray);\n",
+       "    color: white;\n",
+       "    padding: 0.2rem 0.5rem;\n",
+       "    border-radius: 4px;\n",
+       "    font-family: 'JetBrains Mono', monospace;\n",
+       "    font-size: 0.875em;\n",
+       "    box-shadow: var(--shadow-sm);\n",
+       "}\n",
+       "\n",
+       "/* Status indicators */\n",
+       ".status-indicator {\n",
+       "    display: inline-block;\n",
+       "    width: 10px;\n",
+       "    height: 10px;\n",
+       "    border-radius: 50%;\n",
+       "    margin-right: 0.5rem;\n",
+       "}\n",
+       "\n",
+       ".status-success {\n",
+       "    background-color: var(--success-green);\n",
+       "}\n",
+       "\n",
+       ".status-error {\n",
+       "    background-color: var(--error-red);\n",
+       "}\n",
+       "\n",
+       ".status-warning {\n",
+       "    background-color: var(--warning-orange);\n",
+       "}\n",
+       "\n",
+       ".status-info {\n",
+       "    background-color: var(--info-blue);\n",
+       "}\n",
+       "\n",
+       "/* Scrollbar styling (webkit browsers) */\n",
+       "::-webkit-scrollbar {\n",
+       "    width: 10px;\n",
+       "    height: 10px;\n",
+       "}\n",
+       "\n",
+       "::-webkit-scrollbar-track {\n",
+       "    background: var(--bg-light);\n",
+       "    border-radius: 5px;\n",
+       "}\n",
+       "\n",
+       "::-webkit-scrollbar-thumb {\n",
+       "    background: var(--text-secondary);\n",
+       "    border-radius: 5px;\n",
+       "}\n",
+       "\n",
+       "::-webkit-scrollbar-thumb:hover {\n",
+       "    background: var(--redis-red);\n",
+       "}\n",
+       "\n",
+       "/* Print styles */\n",
+       "@media print {\n",
+       "    body {\n",
+       "        background-color: white;\n",
+       "    }\n",
+       "    \n",
+       "    #notebook-container {\n",
+       "        box-shadow: none;\n",
+       "        max-width: 100%;\n",
+       "    }\n",
+       "    \n",
+       "    .jp-CodeCell {\n",
+       "        page-break-inside: avoid;\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "/* Responsive adjustments */\n",
+       "@media (max-width: 768px) {\n",
+       "    #notebook-container {\n",
+       "        padding: 1rem;\n",
+       "        margin: 1rem;\n",
+       "    }\n",
+       "    \n",
+       "    .jp-MarkdownCell h1,\n",
+       "    .rendered_html h1 {\n",
+       "        font-size: 2rem;\n",
+       "    }\n",
+       "    \n",
+       "    .jp-MarkdownCell h2,\n",
+       "    .rendered_html h2 {\n",
+       "        font-size: 1.75rem;\n",
+       "    }\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Load Redis Workshop Styling\n",
-    "from IPython.display import HTML\n",
-    "\n",
-    "css_path = '../../../shared/notebook-styles.css'\n",
-    "try:\n",
-    "    with open(css_path, 'r') as f:\n",
-    "        css = f.read()\n",
-    "        display(HTML(f'<style>{css}</style>'))\n",
-    "        print('✅ Workshop styling loaded!')\n",
-    "except FileNotFoundError:\n",
-    "    print('ℹ️  Using default notebook styling')"
+    "# 🎨 RUN THIS FIRST!\n",
+    "from IPython.display import display, HTML; from pathlib import Path\n",
+    "display(HTML(f'<style>{Path(\"workshops/deploy-redis-for-developers-amr/module-07-provision--connect-lab/notebook-styles.css\").read_text()}</style>'))"
    ]
   },
   {
