--- a/workshops/deploy-redis-for-developers-amr/module-11-advanced-features/advanced-features-lab.ipynb
+++ b/workshops/deploy-redis-for-developers-amr/module-11-advanced-features/advanced-features-lab.ipynb
@@ -3,10 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7360c16e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Redis Workshop Styling\nfrom IPython.display import HTML\n\ncss_path = '../../../shared/notebook-styles.css'\ntry:\n    with open(css_path, 'r') as f:\n        css = f.read()\n        display(HTML(f'<style>{css}</style>'))\n        print('✅ Workshop styling loaded!')\nexcept FileNotFoundError:\n    print('ℹ️  Using default notebook styling')"
+    "# 🎨 RUN THIS FIRST!\n",
+    "from IPython.display import display, HTML; from pathlib import Path\n",
+    "display(HTML(f'<style>{Path(\"workshops/deploy-redis-for-developers-amr/module-11-advanced-features/notebook-styles.css\").read_text()}</style>'))"
    ]
   },
   {
@@ -513,16 +516,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.12.1",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
